--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,9 @@
 
 // Variables
 @import "variables";
+@import "tailwind";
+@import "custom";
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@import "~bootstrap-social/bootstrap-social";
