--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5961,13 +5961,13 @@ textarea {
 }
 
 a {
-  color: #3097d1;
+  color: #2780e3;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #216a94;
+  color: #165ba8;
   text-decoration: underline;
 }
 
@@ -6236,12 +6236,12 @@ mark,
 }
 
 .text-primary {
-  color: #3097d1;
+  color: #2780e3;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #2579a9;
+  color: #1967be;
 }
 
 .text-success {
@@ -6285,12 +6285,12 @@ a.text-danger:focus {
 }
 
 .bg-primary {
-  background-color: #3097d1;
+  background-color: #2780e3;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #2579a9;
+  background-color: #1967be;
 }
 
 .bg-success {
@@ -7908,10 +7908,10 @@ output {
 }
 
 .form-control:focus {
-  border-color: #98cbe8;
+  border-color: #98c2f2;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(152, 203, 232, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(152, 203, 232, 0.6);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(152, 194, 242, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(152, 194, 242, 0.6);
 }
 
 .form-control::-moz-placeholder {
@@ -8630,29 +8630,29 @@ fieldset[disabled] .btn-default.focus {
 
 .btn-primary {
   color: #fff;
-  background-color: #3097d1;
-  border-color: #2a88bd;
+  background-color: #2780e3;
+  border-color: #1c73d5;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
   color: #fff;
-  background-color: #2579a9;
-  border-color: #133d55;
+  background-color: #1967be;
+  border-color: #0d3664;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2579a9;
-  border-color: #1f648b;
+  background-color: #1967be;
+  border-color: #15569f;
 }
 
 .btn-primary:active,
 .btn-primary.active,
 .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #2579a9;
-  border-color: #1f648b;
+  background-color: #1967be;
+  border-color: #15569f;
 }
 
 .btn-primary:active:hover,
@@ -8665,8 +8665,8 @@ fieldset[disabled] .btn-default.focus {
 .open > .btn-primary.dropdown-toggle:focus,
 .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #1f648b;
-  border-color: #133d55;
+  background-color: #15569f;
+  border-color: #0d3664;
 }
 
 .btn-primary:active,
@@ -8684,40 +8684,40 @@ fieldset[disabled] .btn-default.focus {
 fieldset[disabled] .btn-primary:hover,
 fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: #3097d1;
-  border-color: #2a88bd;
+  background-color: #2780e3;
+  border-color: #1c73d5;
 }
 
 .btn-primary .badge {
-  color: #3097d1;
+  color: #2780e3;
   background-color: #fff;
 }
 
 .btn-success {
   color: #fff;
-  background-color: #2ab27b;
-  border-color: #259d6d;
+  background-color: #3fb618;
+  border-color: #379f15;
 }
 
 .btn-success:focus,
 .btn-success.focus {
   color: #fff;
-  background-color: #20895e;
-  border-color: #0d3625;
+  background-color: #2f8912;
+  border-color: #102f06;
 }
 
 .btn-success:hover {
   color: #fff;
-  background-color: #20895e;
-  border-color: #196c4b;
+  background-color: #2f8912;
+  border-color: #24690e;
 }
 
 .btn-success:active,
 .btn-success.active,
 .open > .btn-success.dropdown-toggle {
   color: #fff;
-  background-color: #20895e;
-  border-color: #196c4b;
+  background-color: #2f8912;
+  border-color: #24690e;
 }
 
 .btn-success:active:hover,
@@ -8730,8 +8730,8 @@ fieldset[disabled] .btn-primary.focus {
 .open > .btn-success.dropdown-toggle:focus,
 .open > .btn-success.dropdown-toggle.focus {
   color: #fff;
-  background-color: #196c4b;
-  border-color: #0d3625;
+  background-color: #24690e;
+  border-color: #102f06;
 }
 
 .btn-success:active,
@@ -8749,40 +8749,40 @@ fieldset[disabled] .btn-primary.focus {
 fieldset[disabled] .btn-success:hover,
 fieldset[disabled] .btn-success:focus,
 fieldset[disabled] .btn-success.focus {
-  background-color: #2ab27b;
-  border-color: #259d6d;
+  background-color: #3fb618;
+  border-color: #379f15;
 }
 
 .btn-success .badge {
-  color: #2ab27b;
+  color: #3fb618;
   background-color: #fff;
 }
 
 .btn-info {
   color: #fff;
-  background-color: #8eb4cb;
-  border-color: #7da8c3;
+  background-color: #9954bb;
+  border-color: #8d46b0;
 }
 
 .btn-info:focus,
 .btn-info.focus {
   color: #fff;
-  background-color: #6b9dbb;
-  border-color: #3d6983;
+  background-color: #7e3f9d;
+  border-color: #442254;
 }
 
 .btn-info:hover {
   color: #fff;
-  background-color: #6b9dbb;
-  border-color: #538db0;
+  background-color: #7e3f9d;
+  border-color: #6a3484;
 }
 
 .btn-info:active,
 .btn-info.active,
 .open > .btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #6b9dbb;
-  border-color: #538db0;
+  background-color: #7e3f9d;
+  border-color: #6a3484;
 }
 
 .btn-info:active:hover,
@@ -8795,8 +8795,8 @@ fieldset[disabled] .btn-success.focus {
 .open > .btn-info.dropdown-toggle:focus,
 .open > .btn-info.dropdown-toggle.focus {
   color: #fff;
-  background-color: #538db0;
-  border-color: #3d6983;
+  background-color: #6a3484;
+  border-color: #442254;
 }
 
 .btn-info:active,
@@ -8814,40 +8814,40 @@ fieldset[disabled] .btn-success.focus {
 fieldset[disabled] .btn-info:hover,
 fieldset[disabled] .btn-info:focus,
 fieldset[disabled] .btn-info.focus {
-  background-color: #8eb4cb;
-  border-color: #7da8c3;
+  background-color: #9954bb;
+  border-color: #8d46b0;
 }
 
 .btn-info .badge {
-  color: #8eb4cb;
+  color: #9954bb;
   background-color: #fff;
 }
 
 .btn-warning {
   color: #fff;
-  background-color: #cbb956;
-  border-color: #c5b143;
+  background-color: #ff7518;
+  border-color: #fe6600;
 }
 
 .btn-warning:focus,
 .btn-warning.focus {
   color: #fff;
-  background-color: #b6a338;
-  border-color: #685d20;
+  background-color: #e45c00;
+  border-color: #7e3300;
 }
 
 .btn-warning:hover {
   color: #fff;
-  background-color: #b6a338;
-  border-color: #9b8a30;
+  background-color: #e45c00;
+  border-color: #c04d00;
 }
 
 .btn-warning:active,
 .btn-warning.active,
 .open > .btn-warning.dropdown-toggle {
   color: #fff;
-  background-color: #b6a338;
-  border-color: #9b8a30;
+  background-color: #e45c00;
+  border-color: #c04d00;
 }
 
 .btn-warning:active:hover,
@@ -8860,8 +8860,8 @@ fieldset[disabled] .btn-info.focus {
 .open > .btn-warning.dropdown-toggle:focus,
 .open > .btn-warning.dropdown-toggle.focus {
   color: #fff;
-  background-color: #9b8a30;
-  border-color: #685d20;
+  background-color: #c04d00;
+  border-color: #7e3300;
 }
 
 .btn-warning:active,
@@ -8879,40 +8879,40 @@ fieldset[disabled] .btn-info.focus {
 fieldset[disabled] .btn-warning:hover,
 fieldset[disabled] .btn-warning:focus,
 fieldset[disabled] .btn-warning.focus {
-  background-color: #cbb956;
-  border-color: #c5b143;
+  background-color: #ff7518;
+  border-color: #fe6600;
 }
 
 .btn-warning .badge {
-  color: #cbb956;
+  color: #ff7518;
   background-color: #fff;
 }
 
 .btn-danger {
   color: #fff;
-  background-color: #bf5329;
-  border-color: #aa4a24;
+  background-color: #ff0039;
+  border-color: #e60033;
 }
 
 .btn-danger:focus,
 .btn-danger.focus {
   color: #fff;
-  background-color: #954120;
-  border-color: #411c0e;
+  background-color: #cc002e;
+  border-color: #660017;
 }
 
 .btn-danger:hover {
   color: #fff;
-  background-color: #954120;
-  border-color: #78341a;
+  background-color: #cc002e;
+  border-color: #a80026;
 }
 
 .btn-danger:active,
 .btn-danger.active,
 .open > .btn-danger.dropdown-toggle {
   color: #fff;
-  background-color: #954120;
-  border-color: #78341a;
+  background-color: #cc002e;
+  border-color: #a80026;
 }
 
 .btn-danger:active:hover,
@@ -8925,8 +8925,8 @@ fieldset[disabled] .btn-warning.focus {
 .open > .btn-danger.dropdown-toggle:focus,
 .open > .btn-danger.dropdown-toggle.focus {
   color: #fff;
-  background-color: #78341a;
-  border-color: #411c0e;
+  background-color: #a80026;
+  border-color: #660017;
 }
 
 .btn-danger:active,
@@ -8944,17 +8944,17 @@ fieldset[disabled] .btn-warning.focus {
 fieldset[disabled] .btn-danger:hover,
 fieldset[disabled] .btn-danger:focus,
 fieldset[disabled] .btn-danger.focus {
-  background-color: #bf5329;
-  border-color: #aa4a24;
+  background-color: #ff0039;
+  border-color: #e60033;
 }
 
 .btn-danger .badge {
-  color: #bf5329;
+  color: #ff0039;
   background-color: #fff;
 }
 
 .btn-link {
-  color: #3097d1;
+  color: #2780e3;
   font-weight: normal;
   border-radius: 0;
 }
@@ -8978,7 +8978,7 @@ fieldset[disabled] .btn-link {
 
 .btn-link:hover,
 .btn-link:focus {
-  color: #216a94;
+  color: #165ba8;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -9146,7 +9146,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #3097d1;
+  background-color: #2780e3;
 }
 
 .dropdown-menu > .disabled > a,
@@ -9649,7 +9649,7 @@ tbody.collapse.in {
 .nav .open > a:hover,
 .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #3097d1;
+  border-color: #2780e3;
 }
 
 .nav .nav-divider {
@@ -9709,7 +9709,7 @@ tbody.collapse.in {
 .nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #3097d1;
+  background-color: #2780e3;
 }
 
 .nav-stacked > li {
@@ -10513,7 +10513,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 6px 12px;
   line-height: 1.6;
   text-decoration: none;
-  color: #3097d1;
+  color: #2780e3;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -10537,7 +10537,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 2;
-  color: #216a94;
+  color: #165ba8;
   background-color: #eeeeee;
   border-color: #ddd;
 }
@@ -10550,8 +10550,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > span:focus {
   z-index: 3;
   color: #fff;
-  background-color: #3097d1;
-  border-color: #3097d1;
+  background-color: #2780e3;
+  border-color: #2780e3;
   cursor: default;
 }
 
@@ -10699,48 +10699,48 @@ a.label:focus {
 }
 
 .label-primary {
-  background-color: #3097d1;
+  background-color: #2780e3;
 }
 
 .label-primary[href]:hover,
 .label-primary[href]:focus {
-  background-color: #2579a9;
+  background-color: #1967be;
 }
 
 .label-success {
-  background-color: #2ab27b;
+  background-color: #3fb618;
 }
 
 .label-success[href]:hover,
 .label-success[href]:focus {
-  background-color: #20895e;
+  background-color: #2f8912;
 }
 
 .label-info {
-  background-color: #8eb4cb;
+  background-color: #9954bb;
 }
 
 .label-info[href]:hover,
 .label-info[href]:focus {
-  background-color: #6b9dbb;
+  background-color: #7e3f9d;
 }
 
 .label-warning {
-  background-color: #cbb956;
+  background-color: #ff7518;
 }
 
 .label-warning[href]:hover,
 .label-warning[href]:focus {
-  background-color: #b6a338;
+  background-color: #e45c00;
 }
 
 .label-danger {
-  background-color: #bf5329;
+  background-color: #ff0039;
 }
 
 .label-danger[href]:hover,
 .label-danger[href]:focus {
-  background-color: #954120;
+  background-color: #cc002e;
 }
 
 .badge {
@@ -10776,7 +10776,7 @@ a.label:focus {
 
 .list-group-item.active > .badge,
 .nav-pills > .active > a > .badge {
-  color: #3097d1;
+  color: #2780e3;
   background-color: #fff;
 }
 
@@ -10880,7 +10880,7 @@ a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #3097d1;
+  border-color: #2780e3;
 }
 
 .alert {
@@ -11015,7 +11015,7 @@ a.thumbnail.active {
   line-height: 22px;
   color: #fff;
   text-align: center;
-  background-color: #3097d1;
+  background-color: #2780e3;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -11035,7 +11035,7 @@ a.thumbnail.active {
 }
 
 .progress-bar-success {
-  background-color: #2ab27b;
+  background-color: #3fb618;
 }
 
 .progress-striped .progress-bar-success {
@@ -11043,7 +11043,7 @@ a.thumbnail.active {
 }
 
 .progress-bar-info {
-  background-color: #8eb4cb;
+  background-color: #9954bb;
 }
 
 .progress-striped .progress-bar-info {
@@ -11051,7 +11051,7 @@ a.thumbnail.active {
 }
 
 .progress-bar-warning {
-  background-color: #cbb956;
+  background-color: #ff7518;
 }
 
 .progress-striped .progress-bar-warning {
@@ -11059,7 +11059,7 @@ a.thumbnail.active {
 }
 
 .progress-bar-danger {
-  background-color: #bf5329;
+  background-color: #ff0039;
 }
 
 .progress-striped .progress-bar-danger {
@@ -11201,8 +11201,8 @@ button.list-group-item {
 .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #3097d1;
-  border-color: #3097d1;
+  background-color: #2780e3;
+  border-color: #2780e3;
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -11220,7 +11220,7 @@ button.list-group-item {
 .list-group-item.active .list-group-item-text,
 .list-group-item.active:hover .list-group-item-text,
 .list-group-item.active:focus .list-group-item-text {
-  color: #d7ebf6;
+  color: #dceafa;
 }
 
 .list-group-item-success {
@@ -11677,26 +11677,26 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-primary {
-  border-color: #3097d1;
+  border-color: #2780e3;
 }
 
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #3097d1;
-  border-color: #3097d1;
+  background-color: #2780e3;
+  border-color: #2780e3;
 }
 
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #3097d1;
+  border-top-color: #2780e3;
 }
 
 .panel-primary > .panel-heading .badge {
-  color: #3097d1;
+  color: #2780e3;
   background-color: #fff;
 }
 
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #3097d1;
+  border-bottom-color: #2780e3;
 }
 
 .panel-success {
