--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,7 @@
 @import "variables";
 @import "tailwind";
 @import "custom";
+@import "blankslate";
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
