--- a/resources/assets/sass/auth.scss
+++ b/resources/assets/sass/auth.scss
@@ -5,8 +5,8 @@ html,body {
 }
 
 body.my-login-page {
-  background-color: $body-bg;
-  font-size: $font-size-base;
+  background-color: #f7f9fb;
+  font-size: 14px;
 }
 
 .my-login-page .brand {
