Implement markdown edito

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 @import "tailwind";
 @import "custom";
 @import "blankslate";
+@import "markdown";
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
