Implement media-library

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,9 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~bootstrap-social/bootstrap-social";
+
+.media-object 
+{
+    width: 92px; 
+    height: 92px;
+}
