--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,3 +18,47 @@
     width: 92px; 
     height: 92px;
 }
+
+.align-items-center {
+    align-items: center !important;
+}
+
+.d-flex {
+    display: flex !important;
+}
+
+.p-3 {
+    padding: 0.75rem !important;
+}
+
+.mr-3 {
+    margin-right: 0.75rem !important;
+}
+
+.m-0 {
+    margin: 0 !important;
+}
+
+.bg-red {
+    background-color: #cd201f !important;
+  }
+  
+
+.stamp {
+color: #fff;
+background: #868e96;
+display: inline-block;
+min-width: 3rem;
+height: 2rem;
+padding: 0 .25rem;
+line-height: 2rem;
+text-align: center;
+border-radius: 3px;
+font-weight: 600;
+}
+
+.stamp-md {
+min-width: 3.2rem;
+height: 3.2rem;
+line-height: 3.2rem;
+}
